navigation bar done

--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
+*{
+    font-family: 'Lato', sans-serif;
+}
 .nav-search-icon-custom-style{
     border-radius: 0px 50px 50px 0px!important;
 }
 .nav-search-input-custom-style{
     border-radius: 50px 0px 0px 50px!important;
 }
+
